# RayTracer

./: .gitignore  .travis.yml  AccelerationStructure.h  Boundary.cpp  Boundary.h  CMakeLists.txt  Camera.cpp  Camera.h  Interfaces.h  IsectData.cpp  IsectData.h  Main.cpp  Mat.h  Material.h  ObjReader.h  Primitive.h  Ray.h  Readme.md  Render.cpp  Render.h  Sphere.h  Triangle.h  UtilFuncs.h  Vec.h  image.ppm
x64/Release/RayTracer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RayTracer.lastbuildstate  RayTracer.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
